@@ -1,5 +1,14 @@
 2012-10-02  Sam Weinig  <sam@webkit.org>
 
+        Fix a typo and add some \n's to make Mark happy.
+
+        Rubber-stamped by Mark "logging must be fast" Rowe.
+
+        * WebProcess/InjectedBundle/mac/InjectedBundleMac.mm:
+        (WebKit::InjectedBundle::load):
+
+2012-10-02  Sam Weinig  <sam@webkit.org>
+
         Add Objective-C API for the InjectedBundle
         https://bugs.webkit.org/show_bug.cgi?id=98222
 
